created another file for data cleaning and postgres

--- a/ETL_Data.ipynb
+++ b/ETL_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "4      NaN          NaN     GMT+04:00 Asia/Dubai      54.54     24.51  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "4      NaN          NaN     GMT+04:00 Asia/Dubai      54.54     24.51  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
        "11968  GMT-09:00 America/Anchorage    -149.86     61.14  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "11968  GMT-09:00 America/Anchorage    -149.86     61.14  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "       'Rock Springs', 'Sheridian'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,13 +1634,7 @@
       "Weather found in Newberry\n",
       "Weather found in North Miami\n",
       "Weather found in North Miami Beach\n",
-      "Weather found in North Port\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Weather found in North Port\n",
       "Weather found in Oakland Park\n",
       "Weather found in Ocala\n",
       "Weather found in Ocoee\n",
@@ -2257,13 +2251,7 @@
       "Weather found in Salem\n",
       "Weather found in Seekonk\n",
       "Weather found in Shrewsbury\n",
-      "Weather found in Somerville\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Weather found in Somerville\n",
       "Weather found in South Boston\n",
       "Weather found in South Brookline\n",
       "Weather found in South Dennis\n",
@@ -4222,278 +4210,8 @@
    ],
    "source": [
     "new_starbucks_df = US_starbucks_df[[\"Store Number\", \"Store Name\", \"Ownership Type\", \"Street Address\", \"City\", \"State/Province\", \"Postcode\", \"Phone Number\"]].copy()\n",
-    "\n",
+    "new_starbucks_df.to_csv(\"Resources/us_starbucks_location.csv\")\n",
     "new_starbucks_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>-6.0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.18</td>\n",
-       "      <td>1604370751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Eagle River</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>56</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>1604370712</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Fairbanks</td>\n",
-       "      <td>-25.0</td>\n",
-       "      <td>75</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>1604370756</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Homer</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>23</td>\n",
-       "      <td>75</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>1604370929</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Juneau</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>92</td>\n",
-       "      <td>90</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>1604370647</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          City  Max Temp  Humidity  Cloudiness  Wind Speed        Date\n",
-       "0    Anchorage      -6.0        26           1        4.18  1604370751\n",
-       "1  Eagle River       5.0        56           1        2.10  1604370712\n",
-       "2    Fairbanks     -25.0        75          20        0.59  1604370756\n",
-       "3        Homer      -3.0        23          75        2.10  1604370929\n",
-       "4       Juneau      -2.0        92          90        0.92  1604370647"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_weather_df = weather_df[[\"City\", \"Max Temp\", \"Humidity\", \"Cloudiness\", \"Wind Speed\", \"Date\"]].copy()\n",
-    "\n",
-    "new_weather_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Store Number</th>\n",
-       "      <th>Store Name</th>\n",
-       "      <th>Ownership Type</th>\n",
-       "      <th>Street Address</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State/Province</th>\n",
-       "      <th>Postcode</th>\n",
-       "      <th>Phone Number</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3513-125945</td>\n",
-       "      <td>Safeway-Anchorage #1809</td>\n",
-       "      <td>Licensed</td>\n",
-       "      <td>5600 Debarr Rd Ste 9</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>995042300</td>\n",
-       "      <td>907-339-0900</td>\n",
-       "      <td>-6.0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.18</td>\n",
-       "      <td>1604370751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>74352-84449</td>\n",
-       "      <td>Safeway-Anchorage #2628</td>\n",
-       "      <td>Licensed</td>\n",
-       "      <td>1725 Abbott Rd</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>995073444</td>\n",
-       "      <td>907-339-2800</td>\n",
-       "      <td>-6.0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.18</td>\n",
-       "      <td>1604370751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12449-152385</td>\n",
-       "      <td>Safeway - Anchorage #1813</td>\n",
-       "      <td>Licensed</td>\n",
-       "      <td>1501 Huffman Rd</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>995153596</td>\n",
-       "      <td>907-339-1300</td>\n",
-       "      <td>-6.0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.18</td>\n",
-       "      <td>1604370751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>24936-233524</td>\n",
-       "      <td>100th &amp; C St - Anchorage</td>\n",
-       "      <td>Company Owned</td>\n",
-       "      <td>320 W. 100th Ave, 100, Southgate Shopping Ctr ...</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>99515</td>\n",
-       "      <td>(907) 227-9631</td>\n",
-       "      <td>-6.0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.18</td>\n",
-       "      <td>1604370751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8973-85630</td>\n",
-       "      <td>Old Seward &amp; Diamond</td>\n",
-       "      <td>Company Owned</td>\n",
-       "      <td>1005 E Dimond Blvd</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>AK</td>\n",
-       "      <td>995152050</td>\n",
-       "      <td>907-344-4160</td>\n",
-       "      <td>-6.0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.18</td>\n",
-       "      <td>1604370751</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Store Number                 Store Name Ownership Type  \\\n",
-       "0   3513-125945    Safeway-Anchorage #1809       Licensed   \n",
-       "1   74352-84449    Safeway-Anchorage #2628       Licensed   \n",
-       "2  12449-152385  Safeway - Anchorage #1813       Licensed   \n",
-       "3  24936-233524   100th & C St - Anchorage  Company Owned   \n",
-       "4    8973-85630       Old Seward & Diamond  Company Owned   \n",
-       "\n",
-       "                                      Street Address       City  \\\n",
-       "0                               5600 Debarr Rd Ste 9  Anchorage   \n",
-       "1                                     1725 Abbott Rd  Anchorage   \n",
-       "2                                    1501 Huffman Rd  Anchorage   \n",
-       "3  320 W. 100th Ave, 100, Southgate Shopping Ctr ...  Anchorage   \n",
-       "4                                 1005 E Dimond Blvd  Anchorage   \n",
-       "\n",
-       "  State/Province   Postcode    Phone Number  Max Temp  Humidity  Cloudiness  \\\n",
-       "0             AK  995042300    907-339-0900      -6.0        26           1   \n",
-       "1             AK  995073444    907-339-2800      -6.0        26           1   \n",
-       "2             AK  995153596    907-339-1300      -6.0        26           1   \n",
-       "3             AK      99515  (907) 227-9631      -6.0        26           1   \n",
-       "4             AK  995152050    907-344-4160      -6.0        26           1   \n",
-       "\n",
-       "   Wind Speed        Date  \n",
-       "0        4.18  1604370751  \n",
-       "1        4.18  1604370751  \n",
-       "2        4.18  1604370751  \n",
-       "3        4.18  1604370751  \n",
-       "4        4.18  1604370751  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "merged_df = pd.merge(new_starbucks_df, new_weather_df,on=\"City\",how='inner')\n",
-    "merged_df.head()"
    ]
   },
   {
