updated data cleaning

--- a/ELT_Data Cleaning.ipynb
+++ b/ELT_Data Cleaning.ipynb
@@ -305,6 +305,134 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>61.22</td>\n",
+       "      <td>-149.90</td>\n",
+       "      <td>-6.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1604370751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Eagle River</td>\n",
+       "      <td>45.92</td>\n",
+       "      <td>-89.24</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1604370712</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fairbanks</td>\n",
+       "      <td>64.84</td>\n",
+       "      <td>-147.72</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1604370756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Homer</td>\n",
+       "      <td>59.64</td>\n",
+       "      <td>-151.55</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1604370929</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Juneau</td>\n",
+       "      <td>58.30</td>\n",
+       "      <td>-134.42</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>92</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1604370647</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
+       "0    Anchorage  61.22 -149.90      -6.0        26           1        4.18   \n",
+       "1  Eagle River  45.92  -89.24       5.0        56           1        2.10   \n",
+       "2    Fairbanks  64.84 -147.72     -25.0        75          20        0.59   \n",
+       "3        Homer  59.64 -151.55      -3.0        23          75        2.10   \n",
+       "4       Juneau  58.30 -134.42      -2.0        92          90        0.92   \n",
+       "\n",
+       "  Country        Date  \n",
+       "0      US  1604370751  \n",
+       "1      US  1604370712  \n",
+       "2      US  1604370756  \n",
+       "3      US  1604370929  \n",
+       "4      US  1604370647  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us_weather_df = weather_df[weather_df[\"Country\"].isin([\"US\"])]\n",
+    "us_weather_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
        "      <th>city</th>\n",
        "      <th>max_temp</th>\n",
        "      <th>humidity</th>\n",
@@ -372,14 +500,14 @@
        "4       Juneau      -2.0        92          90        0.92  1604370647"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#renamed the column names and put into a new DF\n",
-    "new_weather_df = weather_df[[\"City\", \"Max Temp\", \"Humidity\", \"Cloudiness\", \"Wind Speed\", \"Date\"]].copy()\n",
+    "new_weather_df = us_weather_df[[\"City\", \"Max Temp\", \"Humidity\", \"Cloudiness\", \"Wind Speed\", \"Date\"]].copy()\n",
     "new_weather_df = new_weather_df.rename(columns ={\"City\": \"city\", \"Max Temp\": \"max_temp\", \"Humidity\": \"humidity\", \n",
     "                                                 \"Cloudiness\": \"cloudiness\", \"Wind Speed\": \"wind_speed\", \"Date\": \"date\"})\n",
     "new_weather_df.head()"
@@ -387,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +669,7 @@
        "4        4.18  1604370751  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,17 +682,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#link to Postgres and need to enter your own password\n",
-    "rds_connection_string = \"postgres:<enter your password>@@localhost:5432/starbucks_weather_db\""
+    "rds_connection_string = \"postgres:<Enter your password>@localhost:5432/starbucks_weather_db\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +711,7 @@
        "['weather_data', 'starbucks_location']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +834,7 @@
        "4       Juneau        -2        92          90           1  1604370647"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +963,7 @@
        "4             AK  995152050    907-344-4160  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
